// Vitest Snapshot v1

exports[`chain rpc > subscribeNewHeads 1`] = `
[
  [
    {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0xf144470800000000",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0xdcda8a4510552aac316a4182ceca732d019876605367e62f2dbe766a0300523fcf49adfe174e74772375ba0472abe87aee4a9fdc92a8092e858d05189838528f",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0xef277eb69bce528c705c3286ec7db1a3a949bb35757b9651e757dedb8fea0ac1",
      "number": 170000,
      "parentHash": "0xd146548de54577c1163549ab5469e9b33f52b937cb742cbeb0cec15f8f037400",
      "stateRoot": "0xe9e7f39d8daec432afa105d27055d2d9ff7daaa21dc59b1d2cdf4d1b2049756d",
    },
  ],
]
`;

exports[`chain rpc > subscribeNewHeads 3`] = `
[
  [
    {
      "digest": {
        "logs": [
          {
            "preRuntime": [
              "0x61757261",
              "0x",
            ],
          },
          {
            "seal": [
              "0x61757261",
              "0xdcda8a4510552aac316a4182ceca732d019876605367e62f2dbe766a0300523fcf49adfe174e74772375ba0472abe87aee4a9fdc92a8092e858d05189838528f",
            ],
          },
        ],
      },
      "extrinsicsRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
      "number": 170001,
      "parentHash": "0x68cff8682eda3e5e63b375253bdb3a01f0dce1879fe7ade97c9697406c56b55a",
      "stateRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
    },
  ],
]
`;
